--- a/templates/notes/list.html
+++ b/templates/notes/list.html
@@ -4,9 +4,9 @@
 {% block title %}Notes{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'notes/css/list.css' %}">
-  
+<link rel="stylesheet" href="{% static 'notes/css/list.css' %}" />
 {% endblock %}
+
 {% block content %}
 <div class="notes-list">
     <h1>Your Updates</h1>
