--- a/templates/footer.html
+++ b/templates/footer.html
@@ -61,20 +61,14 @@
                 <h5 class="mb-3">Company</h5>
                 <ul class="list-unstyled">
                     <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-primary">About Us</a>
+                        <a href="{% url 'about' %}" class="text-muted text-decoration-none hover-primary">About Us</a>
                     </li>
-                    <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-primary">Careers</a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-primary">Press Kit</a>
-                    </li>
+                    
+                    
                     <li class="mb-2">
                         <a href="#" class="text-muted text-decoration-none hover-primary">Contact</a>
                     </li>
-                    <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-primary">Blog</a>
-                    </li>
+                    
                 </ul>
             </div>
             <!-- Divider -->
