--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,10 +7,10 @@
                 </a>
 
                 <ul class="desktop-nav-items">
-                    <li><a href="#" class="desktop-nav-link active"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="#" class="desktop-nav-link"><i class="fas fa-images"></i> Explore</a></li>
-                    <li><a href="#" class="desktop-nav-link"><i class="fas fa-map-marked-alt"></i> Locations</a></li>
-                    <li><a href="#" class="desktop-nav-link"><i class="fas fa-users"></i> Community</a></li>
+                    <li><a href="{% url 'home' %}" class="desktop-nav-link active"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="{% url 'explore' %}" class="desktop-nav-link"><i class="fas fa-images"></i> Explore</a></li>
+                    <li><a href="{% url 'locations' %}" class="desktop-nav-link"><i class="fas fa-map-marked-alt"></i> Locations</a></li>
+                    <li><a href="{% url 'community' %}" class="desktop-nav-link"><i class="fas fa-users"></i> Community</a></li>
                 </ul>
 
                 <div class="d-flex align-items-center">
