--- a/templates/footer.html
+++ b/templates/footer.html
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-primary">
+                        <a href="{% url 'community' %}" class="text-muted text-decoration-none hover-primary">
                             <i class="fas fa-users me-2"></i>Community
                         </a>
                     </li>
@@ -66,7 +66,7 @@
                     
                     
                     <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-primary">Contact</a>
+                        <a href="{% url 'contact' %}" class="text-muted text-decoration-none hover-primary">Contact Us</a>
                     </li>
                     
                 </ul>
@@ -78,7 +78,7 @@
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                 <small class="text-muted">
-                    &copy; 2025 Clearview. All rights reserved.
+                    &copy; 2026 Clearview. All rights reserved.
                 </small>
             </div>
             <div class="col-md-6">
