--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,11 +6,11 @@
                     Clearview
                 </a>
 
-                <ul class="desktop-nav-items">
-                    <li><a href="{% url 'home' %}" class="desktop-nav-link active"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="{% url 'explore' %}" class="desktop-nav-link"><i class="fas fa-images"></i> Explore</a></li>
-                    <li><a href="{% url 'locations' %}" class="desktop-nav-link"><i class="fas fa-map-marked-alt"></i> Locations</a></li>
-                    <li><a href="{% url 'community' %}" class="desktop-nav-link"><i class="fas fa-users"></i> Community</a></li>
+                <ul class="desktop-nav-items" role="menubar">
+                    <li role="none"><a href="{% url 'home' %}" class="desktop-nav-link active" role="menuitem"><i class="fas fa-home"></i> Home</a></li>
+                    <li role="none"><a href="{% url 'explore' %}" class="desktop-nav-link" role="menuitem"><i class="fas fa-images"></i> Explore</a></li>
+                    <li role="none"><a href="{% url 'locations' %}" class="desktop-nav-link" role="menuitem"><i class="fas fa-map-marked-alt"></i> Locations</a></li>
+                    <li role="none"><a href="{% url 'community' %}" class="desktop-nav-link" role="menuitem"><i class="fas fa-users"></i> Community</a></li>
                 </ul>
 
                 <div class="d-flex align-items-center">
