--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -44,7 +44,7 @@
           <input type="text" placeholder="Search location..." />
         </div>
 
-        <a href="{% url 'login' %}" class="btn-login-desktop me-2">
+        <a href="{% url 'users:login' %}" class="btn-login-desktop me-2">
           <i class="fas fa-sign-in-alt"></i>
           Login
         </a>
